--- a/styles/styles.css
+++ b/styles/styles.css
@@ -512,7 +512,6 @@ textarea {
   padding: .9375em 0
 }
 
-.collections-grid,
 .collections-row {
   display: grid;
   width: 100%;
@@ -523,7 +522,13 @@ textarea {
 
 .collections-grid {
   grid-template-rows: repeat(2, 1fr);
-  margin: 2em auto
+  margin: 4em auto 8em;
+  background-color: #000;
+  display: grid;
+  width: 85%;
+  max-width: 85%;
+  height: auto;
+  padding: 0
 }
 
 .collections-row {
@@ -531,7 +536,7 @@ textarea {
   width: 80vw;
   max-width: 100%;
   height: auto;
-  margin: 4em auto
+  margin: 2em auto 0;
 }
 
 .collection-thumbnail-box {
@@ -540,7 +545,7 @@ textarea {
   width: 100%;
   height: auto;
   margin: 2em auto;
-  padding: 1em;
+  padding: 2em;
   box-sizing: border-box;
   display: flex;
   flex-direction: column
@@ -553,6 +558,11 @@ textarea {
   margin: 0 auto;
   background-color: #fff;
   padding: .725em
+}
+
+.collection-links-text {
+  color: cyan;
+  text-align: center;
 }
 
 .collections-container {
@@ -572,15 +582,6 @@ textarea {
   margin: 0 auto;
   border: .2em solid #fff;
   object-fit: cover
-}
-
-.collections-button-grid {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 0;
-  margin: 1em auto;
-  padding: 0 1.5em
 }
 
 .collections-btn {
@@ -688,11 +689,6 @@ textarea {
     height: auto;
     padding: 0;
     margin: 0 auto
-  }
-
-  .collections {
-    height: auto;
-    width: 100%
   }
 
   .collections-title {
