--- a/styles/styles.css
+++ b/styles/styles.css
@@ -798,3 +798,11 @@ textarea {
     width: 100%
   }
 }
+
+@media (max-width: 480px) {
+  .menu-grid {
+    width: 90%;
+    max-width: 90vw;
+
+  }
+}
