--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -424,7 +424,8 @@ footer {
   justify-content: center;
   background-color: #000;
   padding: 2em 0;
-  margin-top: -4em
+  margin-top: -4em;
+  min-height: 29.56rem;
 }
 
 .footer-links ul,
@@ -843,6 +844,15 @@ button.submit-button:hover {
 
 
 @media (max-width:1024px) {
+
+
+  .button-grid {
+    display: flex;
+    width: 90%;
+    max-width: 90vw;
+    padding-bottom: 1em;
+  }
+
   .nav-links {
     display: none
   }
@@ -1113,13 +1123,19 @@ button.submit-button:hover {
 }
 
 @media (max-width:480px) {
+
+  .fancy-border-img {
+    margin: 2em auto 2em;
+  }
+
   .canvas-skills-grid {
-    min-height: 20rem;
+    min-height: 31rem;
+    height: auto;
   }
 
   .canvas-skills-grid img {
     width: 28.5rem;
-    height: 16rem;
+    height: 16.625rem;
   }
 
   .side-nav {
