--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -424,9 +424,11 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: #000;
-  padding: 2em 0;
+  padding: 2em 5em;
   margin-top: -4em;
-  min-height: 29.56rem;
+  min-height: 29rem;
+  height: auto;
+  box-sizing: border-box;
 }
 
 .footer-links ul,
