--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -320,8 +320,8 @@ nav {
 }
 
 .canvas-skills-grid img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
   border: 1em solid #000;
   border-right: 0.5em solid #000;
