--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -281,6 +281,11 @@ nav {
   text-align: center;
 }
 
+.canvas-skills-grid picture,
+.canvas-skills-title {
+  flex: 0 0 auto;
+}
+
 .canvas-skills-grid {
   display: flex;
   flex-wrap: nowrap;
@@ -289,18 +294,12 @@ nav {
   max-width: 100vw;
   height: auto;
   box-sizing: border-box;
-  contain: none;
   overflow: hidden;
   background-color: #000;
-  contain: paint;
+  contain: layout paint;
   padding: 0.2em;
   min-height: 14.25rem;
-}
-
-.canvas-skills-grid picture,
-.canvas-skills-title {
-  flex: 0 0 auto;
-
+  /* Helps reserve layout */
 }
 
 .canvas-skills-grid picture {
@@ -310,23 +309,22 @@ nav {
   background-color: black;
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+  justify-content: center;
   align-items: center;
-  height: 100%;
-  max-height: 100%;
-  contain: none;
-  min-height: 14.25rem;
-  aspect-ratio: 744 / 418;
+  aspect-ratio: 673 / 451;
+  contain: layout paint;
 }
 
 .canvas-skills-grid img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   object-fit: cover;
+  display: block;
   border: 1em solid #000;
   border-right: 0.5em solid #000;
-
+  aspect-ratio: 673 / 451;
 }
+
 
 img[fetchpriority=high] {
   contain: layout paint;
