--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -307,6 +307,8 @@ nav {
   flex: 0 0 40%;
   max-width: 40%;
   min-width: 40%;
+  width: 765px;
+  height: 393px;
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -316,13 +318,13 @@ nav {
   max-height: 100%;
   contain: none;
   min-height: 14.25rem;
-  aspect-ratio: 673 / 451;
+  aspect-ratio: 765 / 393;
 }
 
 .canvas-skills-grid img {
   max-width: 100%;
-  width: 673px;
-  height: 451px;
+  width: 100%;
+  height: auto;
   object-fit: cover;
   border: 1em solid #000;
   border-right: 0.5em solid #000;
@@ -1112,14 +1114,20 @@ button.submit-button:hover {
   }
 
   .canvas-skills-grid {
-    min-height: 39.178rem;
     height: auto;
+    min-height: 43rem;
+  }
+
+  .canvas-skills-grid picture {
+    width: 673px;
+    height: 451px;
+    aspect-ratio: 673 / 451;
+    min-height: 28.18rem;
   }
 
   .canvas-skills-grid img {
-    width: 28.5rem;
-    height: 24.528rem;
-    aspect-ratio: 473 / 392;
+    width: 100%;
+    height: auto;
   }
 
   .side-nav {
