--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -308,7 +308,7 @@ nav {
   max-width: 40%;
   min-width: 40%;
   width: 765px;
-  height: 393px;
+  height: 396px;
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -317,8 +317,8 @@ nav {
   height: 100%;
   max-height: 100%;
   contain: none;
-  min-height: 14.25rem;
-  aspect-ratio: 765 / 393;
+  min-height: 13.31rem;
+  aspect-ratio: 765 / 396;
 }
 
 .canvas-skills-grid img {
@@ -326,8 +326,10 @@ nav {
   width: 100%;
   height: auto;
   object-fit: cover;
-  border: 1em solid #000;
+  border-top: 1em solid #000;
+  border-left: 1em solid black;
   border-right: 0.5em solid #000;
+  border-bottom: none;
 
 }
 
@@ -1119,10 +1121,10 @@ button.submit-button:hover {
   }
 
   .canvas-skills-grid picture {
-    width: 673px;
-    height: 451px;
-    aspect-ratio: 673 / 451;
-    min-height: 28.18rem;
+    width: 473px;
+    height: 392px;
+    aspect-ratio: 473 / 392;
+    min-height: 24.5rem;
   }
 
   .canvas-skills-grid img {
