--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -294,7 +294,7 @@ nav {
   background-color: #000;
   contain: paint;
   padding: 0.2em;
-  min-height: 14.25rem;
+  min-height: 14.68rem;
 }
 
 .canvas-skills-grid picture,
@@ -317,20 +317,19 @@ nav {
   height: 100%;
   max-height: 100%;
   contain: none;
-  min-height: 13.31rem;
-  aspect-ratio: 765 / 396;
+  min-height: 13.625rem;
 }
 
 .canvas-skills-grid img {
   max-width: 100%;
   width: 100%;
   height: auto;
-  aspect-ratio: 765 / 396;
   object-fit: cover;
   border-top: 1em solid #000;
   border-left: 1em solid black;
   border-right: 0.5em solid #000;
   border-bottom: none;
+  aspect-ratio: 765 / 410;
 }
 
 img[fetchpriority=high] {
@@ -820,7 +819,39 @@ button.submit-button:hover {
 
 
 @media (max-width:1024px) {
+  .canvas-skills-grid {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    box-sizing: border-box;
+    contain: none;
+    overflow: hidden;
+    background-color: #000;
+    contain: paint;
+    padding: 0.2em;
+    min-height: 14.25rem;
+  }
 
+  .canvas-skills-grid picture {
+    min-height: 13.125rem;
+    aspect-ratio: 407 / 210;
+  }
+
+  .canvas-skills-grid img {
+    aspect-ratio: 407 / 210;
+    border-top: 0.5em solid #000;
+    border-left: 0.5em solid black;
+    border-right: 0.25em solid #000;
+  }
+
+  .canvas-skills-title {
+    border-top: 0.5em solid #000;
+    border-right: 0.5em solid black;
+    border-left: 0.25em solid #000;
+  }
 
   .button-grid {
     display: flex;
@@ -874,46 +905,45 @@ button.submit-button:hover {
   .canvas-skills-grid {
     display: flex;
     flex-direction: column;
-    min-height: clamp(16rem, calc(30vw * 0.6), 22.5rem);
-    max-height: 53.375rem;
+    height: auto;
+    width: 100%;
+    max-width: 100vw;
+    min-height: 42.84rem;
   }
 
   .canvas-skills-grid picture {
-    flex: 0 0 100%;
-    max-width: 100%;
-    min-width: 100%;
-    width: 57.25rem;
-    height: 33.625rem;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    min-height: 24.59rem;
   }
 
   .canvas-skills-grid img {
-    border: 1em solid black;
-    background-color: #000;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: block;
     aspect-ratio: 933 / 538;
   }
 
-  img[fetchpriority=high] {
-    contain: layout paint;
-    content-visibility: auto;
-  }
-
   .canvas-skills-title {
-    flex: 1;
-    width: 90%;
-    max-width: 90vw;
-    margin: 1em auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    border: 1em solid black;
+    min-height: 17.81;
   }
 
   .canvas-skills-title h1 {
-    padding: 0.4em 0.4em 0.2em;
-    font-size: clamp(2rem, 4rem, 5rem);
-    line-height: 1.3;
+    font-size: 7vw;
+    line-height: 1.6;
   }
 
   .canvas-skills-title h2 {
-    font-size: clamp(1.8rem, 3rem, 4rem);
-    padding: .2em 0.4em 0.4em;
-    line-height: 1.2;
+    font-size: 5vw;
+    line-height: 1.4;
   }
 
   p {
@@ -924,38 +954,7 @@ button.submit-button:hover {
 }
 
 @media (max-width:768px) {
-  .canvas-skills-grid {
-    min-height: 45.95rem;
-  }
 
-  .fancy-border-img {
-    border: 0.5em solid white;
-    outline: 0.2em solid white;
-    outline-offset: 1em;
-    padding: 0.5em;
-    width: 85%;
-    max-width: 85vw;
-    height: auto;
-    margin: 6em auto 6em;
-  }
-
-  .canvas-skills-grid img {
-    width: 46.5rem;
-    height: 26.125rem;
-    aspect-ratio: 761 / 441;
-  }
-
-  .canvas-skills-title h2 {
-    line-height: 1.2;
-    font-size: 3rem;
-    padding: 0.2em 0.4em 0.4em;
-  }
-
-  .canvas-skills-title h1 {
-    line-height: 1.3;
-    font-size: 3.5rem;
-    padding: 0.4em 0.4em 0.2em;
-  }
 
   .nav-logo {
     height: calc(12.5rem / 2.38);
@@ -1107,9 +1106,22 @@ button.submit-button:hover {
     width: 80%;
     max-width: 80vw;
   }
+
 }
 
 @media (min-width:430px) and (max-width:480px) {
+  .canvas-skills-grid {
+    min-height: 43rem;
+  }
+
+  .canvas-skills-grid img {
+    min-height: 24.5rem;
+    aspect-ratio: 473 / 392;
+  }
+
+  .canvas-skills-title {
+    border: 0.1em solid black;
+  }
 
   .fancy-border-img {
     margin: 2em auto 2em;
