--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -287,49 +287,36 @@ nav {
   align-items: stretch;
   width: 100%;
   max-width: 100vw;
-  height: auto;
   box-sizing: border-box;
-  contain: none;
-  overflow: hidden;
-  background-color: #000;
-  contain: paint;
   padding: 0.2em;
+  background-color: #000;
+  overflow: hidden;
+  contain: paint;
   min-height: 14.68rem;
-}
-
-.canvas-skills-grid picture,
-.canvas-skills-title {
-  flex: 0 0 auto;
-
 }
 
 .canvas-skills-grid picture {
   flex: 0 0 40%;
   max-width: 40%;
   min-width: 40%;
-  width: 765px;
-  height: 396px;
+  aspect-ratio: 765 / 430;
   background-color: black;
   display: flex;
-  flex-direction: column;
-  justify-content: stretch;
-  align-items: center;
-  height: 100%;
-  max-height: 100%;
-  contain: none;
-  min-height: 13.625rem;
+  align-items: stretch;
+  justify-content: center;
+  contain: layout paint;
 }
 
 .canvas-skills-grid img {
-  max-width: 100%;
   width: 100%;
   height: auto;
+  aspect-ratio: 765 / 430;
   object-fit: cover;
+  display: block;
   border-top: 1em solid #000;
-  border-left: 1em solid black;
+  border-left: 1em solid #000;
   border-right: 0.5em solid #000;
-  border-bottom: none;
-  aspect-ratio: 765 / 410;
+  border-bottom: 1em solid black;
 }
 
 img[fetchpriority=high] {
@@ -836,7 +823,6 @@ button.submit-button:hover {
   }
 
   .canvas-skills-grid picture {
-    min-height: 13.125rem;
     aspect-ratio: 407 / 210;
   }
 
@@ -915,7 +901,7 @@ button.submit-button:hover {
     width: 100%;
     max-width: 100vw;
     height: auto;
-    min-height: 24.59rem;
+    aspect-ratio: 933 / 538;
   }
 
   .canvas-skills-grid img {
@@ -1055,8 +1041,6 @@ button.submit-button:hover {
     font-size: .9rem;
     margin: 0 auto
   }
-
-
 }
 
 @media (max-width: 680px) {
@@ -1064,8 +1048,11 @@ button.submit-button:hover {
     min-height: 44.33rem;
   }
 
+  .canvas-skills-grid picture {
+    aspect-ratio: 673 / 441;
+  }
+
   .canvas-skills-grid img {
-    min-height: 24.529rem;
     aspect-ratio: 673 / 441;
   }
 
