--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -286,6 +286,7 @@ nav {
   flex-wrap: nowrap;
   align-items: stretch;
   width: 100%;
+  height: 392px;
   max-width: 100vw;
   box-sizing: border-box;
   padding: 0.2em;
@@ -946,13 +947,12 @@ button.submit-button:hover {
   p {
     line-height: 1.4;
   }
-
-
 }
 
 @media (max-width:768px) {
   .canvas-skills-grid {
     min-height: 42.81rem;
+    height: auto;
   }
 
   .canvas-skills-grid picture {
@@ -1069,6 +1069,7 @@ button.submit-button:hover {
 @media (max-width: 680px) {
   .canvas-skills-grid {
     min-height: 44.33rem;
+    height: auto;
   }
 
   .canvas-skills-grid picture {
@@ -1124,6 +1125,7 @@ button.submit-button:hover {
 @media (min-width:430px) and (max-width:480px) {
   .canvas-skills-grid {
     min-height: 43rem;
+    height: auto;
   }
 
   .canvas-skills-grid picture {
