--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -134,6 +134,7 @@ p a:visited {
   text-shadow: 0 0 1px #003f4d, 0 0 2px #003f4d
 }
 
+.author-bio-text p a,
 #nav ul li a,
 #footer-links ul li a {
   color: cyan;
