removed extra styles on canvas skills grid

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,5 +1,6 @@
   #projects {
     min-height: 100vh;
+    position: relative;
     contain: strict;
     display: flex;
     flex-direction: column;
@@ -76,8 +77,6 @@
   #description {
     margin: 1em auto 0;
   }
-
-
 
   #section1 {
     margin: 4em auto;
@@ -335,17 +334,6 @@
   }
 
   @media (max-width:1024px) {
-    .canvas-skills-grid picture {
-      width: 407px;
-      height: 288px;
-      min-height: 15rem;
-      max-height: 18rem;
-    }
-
-    .canvas-skills-grid img {
-      aspect-ratio: 407 / 288;
-    }
-
     .menu-grid {
       display: flex;
       flex-direction: column;
@@ -401,15 +389,6 @@
   }
 
   @media (max-width:768px) {
-    .canvas-skills-grid picture {
-      width: 761px;
-      height: 439px;
-      min-height: 27rem;
-    }
-
-    .canvas-skills-grid img {
-      aspect-ratio: 761 / 439;
-    }
 
     .thumbnails picture {
       width: 337px;
@@ -544,16 +523,6 @@
   }
 
   @media (max-width: 680px) {
-    .canvas-skills-grid picture {
-      width: 673px;
-      height: 441px;
-      min-height: 27rem;
-    }
-
-    .canvas-skills-grid img {
-      aspect-ratio: 673 / 441;
-    }
-
     .thumbnail #projects {
       width: 90%;
       max-width: 90vw;
@@ -640,21 +609,6 @@
   }
 
   @media (max-width:480px) {
-    .canvas-skills-grid picture {
-      width: 473px;
-      height: 392px;
-      min-height: 24.5rem;
-    }
-
-    .canvas-skills-grid img {
-      aspect-ratio: 473 / 392;
-    }
-
-    .thumbnails picture {
-      width: 220px;
-      height: 189px;
-      min-height: 9.125rem;
-    }
 
     .thumbnails img {
       aspect-ratio: 220 / 189;
