--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -887,8 +887,8 @@ button.submit-button:hover {
 
   .hamburger-icon {
     display: flex;
-    width: 3.5vw;
-    height: auto;
+    width: 48px;
+    height: 48px;
     min-height: 3rem;
   }
 
