added css to hamburger-icon

--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -510,7 +510,11 @@ footer {
 }
 
 .hamburger-icon {
-  display: none
+  width: 48px;
+  height: 48px;
+  aspect-ratio: 1 / 1;
+  object-fit: contain;
+  display: none;
 }
 
 #back-to-top {
