--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,7 +1,7 @@
   #projects {
     min-height: 100vh;
     position: relative;
-    contain: strict;
+    contain: layout;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -11,7 +11,6 @@
     max-width: 54vw;
     padding: 2em 1em;
     height: auto;
-    contain: layout;
     background-color: #000;
     box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1);
   }
@@ -626,6 +625,7 @@
     .menu-grid {
       width: 90%;
       max-width: 90vw;
+      height: auto;
     }
 
     .github-img img {
