added content layout paint, test

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -2,6 +2,7 @@
     min-height: 100vh;
     position: relative;
     display: flex;
+    contain: layout paint style;
     flex-direction: column;
     justify-content: start;
     overflow-x: hidden;
