--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -720,6 +720,17 @@ button.submit-button:hover {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, .5)
 }
 
+.lcp-title {
+  font-size: clamp(1.5rem, 2.5vw, 2.5rem);
+  font-weight: 600;
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+  margin: 1em auto;
+  width: 100%;
+}
+
+
 
 @media (max-width:1024px) {
   .button-grid {
